--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,61 @@
-= OpenLDAP Java (JLDAP)
+// Global settings
+:ascii-ids:
+:encoding: UTF-8
+:lang: en
+:icons: font
+:toc:
+:toc-placement!:
+:toclevels: 3
+:numbered:
+:stem:
+
+ifdef::env-github[]
+:imagesdir: https://raw.githubusercontent.com/poolborges/kriolos-openldap-java/main/docs/src/main/images/
+:tip-caption: :bulb:
+:note-caption: :information_source:
+:important-caption: :heavy_exclamation_mark:
+:caution-caption: :fire:
+:warning-caption: :warning:
+:badges:
+:doc-dir: https://github.com/poolborges/kriolos-openldap-java/tree/main/docs
+:repo-base-url: https://github.com/poolborges/kriolos-openldap-java/
+endif::[]
+
+[[doc]]
+= OpenLDAP Java (JLDAP) - A Java Ldap Browser 
+:author: Copyright (c) KriolOS Team.
+:revnumber: 2025-08-26
+:revdate: {last-update-label} {docdatetime}
+:version-label!:
+
+
+WARNING:  (NOT RELEASE YET)
+
+ifdef::badges[]
+== Build status
+
+image:https://github.com/poolborges/kriolos-openldap-java/actions/workflows/ci.yml/badge.svg["Build Status", link="https://github.com/poolborges/kriolos-openldap-java/actions/workflows/ci.yml"]
+image:https://codecov.io/github/poolborges/kriolos-openldap-java/coverage.svg["Code Coverage", link="https://codecov.io/gh/poolborges/kriolos-openldap-java"]
+image:https://img.shields.io/badge/License-GPLv3-blue.svg["License: GPL v3", link="https://www.gnu.org/licenses/gpl-3.0.en.html"]
+image:https://badges.crowdin.net/krpos/localized.svg["Crowdin/Translation Status", link="https://crowdin.com/project/krpos"]
+
+=== Stats
+
+image:https://img.shields.io/github/issues-pr-raw/poolborges/kriolos-openldap-java["GitHub Pull Requests", link="https://github.com/poolborges/kriolos-openldap-java/pulls"]
+image:https://img.shields.io/badge/team-committers-green["GitHub Committers", link="https://github.com/orgs/kriolos/teams/obiz-core-team/members"]
+image:https://img.shields.io/github/contributors/poolborges/kriolos-openldap-java["GitHub Contributors", link="https://github.com/poolborges/kriolos-openldap-java/contributors"]
+image:https://img.shields.io/github/commit-activity/m/poolborges/kriolos-openldap-java["GitHub Commit Activity", link="https://github.com/poolborges/kriolos-openldap-java/commits"]
+
+=== Release and Download
+
+image:https://img.shields.io/github/release-date-pre/poolborges/kriolos-openldap-java.svg["GitHub pre-release", link="https://github.com/poolborges/kriolos-openldap-java/releases"]
+image:https://img.shields.io/github/release/poolborges/kriolos-openldap-java.svg["GitHub release", link="https://github.com/poolborges/kriolos-openldap-java/releases"]
+image:https://img.shields.io/github/downloads/poolborges/kriolos-openldap-java/total["GitHub all releases", link="https://github.com/poolborges/kriolos-openldap-java/releases"]
+
+endif::[]
+
+
+== About 
 
 
 * Directory Services Markup Language (DSML)
